[gd_scene load_steps=4 format=3 uid="uid://fww6hvm3n2g8"]

[ext_resource type="Script" path="res://scenes/coupon_entity/coupon_entity.gd" id="1_ydmks"]
[ext_resource type="Texture2D" uid="uid://dqke6qsqft8nl" path="res://assets/sprites/coupon_sprite.png" id="2_kaqyd"]
[ext_resource type="Theme" uid="uid://dosqmxn1b35n3" path="res://main_theme.tres" id="3_e3kq7"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(175, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 175.0
offset_bottom = 200.0
script = ExtResource("1_ydmks")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -1.0
offset_top = 1.0
offset_right = 174.323
offset_bottom = 272.0
texture = ExtResource("2_kaqyd")
expand_mode = 3
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_top = 22.0
offset_right = 60.5
offset_bottom = 62.0
grow_horizontal = 2
alignment = 1

[node name="DiscountPrimary" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_e3kq7")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "$20"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DiscountSuper" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_e3kq7")
theme_type_variation = &"HeaderSmall"
text = "super"

[node name="DiscountSub" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_e3kq7")
theme_type_variation = &"HeaderSmall"
text = "sub"

[node name="Filters" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 160)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.5
offset_top = 99.0
offset_right = 73.5
offset_bottom = 259.0
grow_horizontal = 2
theme_override_constants/separation = 0
